push immutable class code